fix vertically align

--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 
 body{
     background-color: hsl(212, 45%, 89%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
     font-family: Outfit;
     font-size: 15px;
 }
@@ -12,6 +9,10 @@ body{
     border-radius: 25px;
     background-color: hsl(0, 0%, 100%);
     padding: 20px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
 }
 .card p{
     font-weight: 700;
